--- a/index.html
+++ b/index.html
@@ -45,11 +45,19 @@
         <!-- player turn indicator -->
         <div class="turn hidden" id="turn">
             <span class="turn__icon">
-                <svg id="icon-x-default" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+                <!-- X default icon -->
+                <svg class="turn__icon--X hidden" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
                     <path fill="currentColor"
                         d="M15.002 1.147 32 18.145 48.998 1.147a3 3 0 0 1 4.243 0l9.612 9.612a3 3 0 0 1 0 4.243L45.855 32l16.998 16.998a3 3 0 0 1 0 4.243l-9.612 9.612a3 3 0 0 1-4.243 0L32 45.855 15.002 62.853a3 3 0 0 1-4.243 0L1.147 53.24a3 3 0 0 1 0-4.243L18.145 32 1.147 15.002a3 3 0 0 1 0-4.243l9.612-9.612a3 3 0 0 1 4.243 0Z"
                         fill-rule="evenodd" />
                 </svg>
+
+                <!-- O default icon -->
+                <svg class="turn__icon--O hidden" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+                    <path fill="currentColor"
+                        d="M32 0c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z" />
+                </svg>
+                <!-- <img class="turn__icon-image" src="/assets/images/icon-x-default.svg" alt="X-icon"> -->
             </span>
             <p>Turn</p>
         </div>
@@ -118,38 +126,189 @@
 
         <!-- game board -->
         <template id="game-screen">
-            <div class="board">
-                <div class="board__tile"></div> <!--1-->
-                <div class="board__tile"></div> <!--2-->
-                <div class="board__tile"></div> <!--3-->
-                <div class="board__tile"></div> <!--4-->
-                <div class="board__tile"></div> <!--5-->
-                <div class="board__tile"></div> <!--6-->
-                <div class="board__tile"></div> <!--7-->
-                <div class="board__tile"></div> <!--8-->
-                <div class="board__tile"></div> <!--9-->
+            <div class="board" id="board">
+                <!--1-->
+                <div class="board__tile">
+                    <!-- X outline icon -->
+                    <svg class="board__tile--X hidden" width="64" height="64" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M51.12 1.269c.511 0 1.023.195 1.414.586l9.611 9.611c.391.391.586.903.586 1.415s-.195 1.023-.586 1.414L44.441 32l17.704 17.705c.391.39.586.902.586 1.414 0 .512-.195 1.024-.586 1.415l-9.611 9.611c-.391.391-.903.586-1.415.586a1.994 1.994 0 0 1-1.414-.586L32 44.441 14.295 62.145c-.39.391-.902.586-1.414.586a1.994 1.994 0 0 1-1.415-.586l-9.611-9.611a1.994 1.994 0 0 1-.586-1.415c0-.512.195-1.023.586-1.414L19.559 32 1.855 14.295a1.994 1.994 0 0 1-.586-1.414c0-.512.195-1.024.586-1.415l9.611-9.611c.391-.391.903-.586 1.415-.586s1.023.195 1.414.586L32 19.559 49.705 1.855c.39-.391.902-.586 1.414-.586Z"
+                            stroke="#31C3BD" stroke-width="2" fill="none" />
+                    </svg>
+
+                    <!-- O outline icon -->
+                    <svg class="board__tile--O hidden" width="66" height="66" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M33 1c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C15.327 65 1 50.673 1 33 1 15.327 15.327 1 33 1Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z"
+                            stroke="#F2B137" stroke-width="2" fill="none" />
+                    </svg>
+                </div>
+
+                <!--2-->
+                <div class="board__tile">
+                    <!-- X outline icon -->
+                    <svg class="board__tile--X hidden" width="64" height="64" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M51.12 1.269c.511 0 1.023.195 1.414.586l9.611 9.611c.391.391.586.903.586 1.415s-.195 1.023-.586 1.414L44.441 32l17.704 17.705c.391.39.586.902.586 1.414 0 .512-.195 1.024-.586 1.415l-9.611 9.611c-.391.391-.903.586-1.415.586a1.994 1.994 0 0 1-1.414-.586L32 44.441 14.295 62.145c-.39.391-.902.586-1.414.586a1.994 1.994 0 0 1-1.415-.586l-9.611-9.611a1.994 1.994 0 0 1-.586-1.415c0-.512.195-1.023.586-1.414L19.559 32 1.855 14.295a1.994 1.994 0 0 1-.586-1.414c0-.512.195-1.024.586-1.415l9.611-9.611c.391-.391.903-.586 1.415-.586s1.023.195 1.414.586L32 19.559 49.705 1.855c.39-.391.902-.586 1.414-.586Z"
+                            stroke="#31C3BD" stroke-width="2" fill="none" />
+                    </svg>
+
+                    <!-- O outline icon -->
+                    <svg class="board__tile--O hidden" width="66" height="66" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M33 1c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C15.327 65 1 50.673 1 33 1 15.327 15.327 1 33 1Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z"
+                            stroke="#F2B137" stroke-width="2" fill="none" />
+                    </svg>
+                </div>
+
+                <!--3-->
+                <div class="board__tile">
+                    <!-- X outline icon -->
+                    <svg class="board__tile--X hidden" width="64" height="64" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M51.12 1.269c.511 0 1.023.195 1.414.586l9.611 9.611c.391.391.586.903.586 1.415s-.195 1.023-.586 1.414L44.441 32l17.704 17.705c.391.39.586.902.586 1.414 0 .512-.195 1.024-.586 1.415l-9.611 9.611c-.391.391-.903.586-1.415.586a1.994 1.994 0 0 1-1.414-.586L32 44.441 14.295 62.145c-.39.391-.902.586-1.414.586a1.994 1.994 0 0 1-1.415-.586l-9.611-9.611a1.994 1.994 0 0 1-.586-1.415c0-.512.195-1.023.586-1.414L19.559 32 1.855 14.295a1.994 1.994 0 0 1-.586-1.414c0-.512.195-1.024.586-1.415l9.611-9.611c.391-.391.903-.586 1.415-.586s1.023.195 1.414.586L32 19.559 49.705 1.855c.39-.391.902-.586 1.414-.586Z"
+                            stroke="#31C3BD" stroke-width="2" fill="none" />
+                    </svg>
+
+                    <!-- O outline icon -->
+                    <svg class="board__tile--O hidden" width="66" height="66" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M33 1c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C15.327 65 1 50.673 1 33 1 15.327 15.327 1 33 1Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z"
+                            stroke="#F2B137" stroke-width="2" fill="none" />
+                    </svg>
+                </div>
+
+                <!--4-->
+                <div class="board__tile">
+                    <!-- X outline icon -->
+                    <svg class="board__tile--X hidden" width="64" height="64" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M51.12 1.269c.511 0 1.023.195 1.414.586l9.611 9.611c.391.391.586.903.586 1.415s-.195 1.023-.586 1.414L44.441 32l17.704 17.705c.391.39.586.902.586 1.414 0 .512-.195 1.024-.586 1.415l-9.611 9.611c-.391.391-.903.586-1.415.586a1.994 1.994 0 0 1-1.414-.586L32 44.441 14.295 62.145c-.39.391-.902.586-1.414.586a1.994 1.994 0 0 1-1.415-.586l-9.611-9.611a1.994 1.994 0 0 1-.586-1.415c0-.512.195-1.023.586-1.414L19.559 32 1.855 14.295a1.994 1.994 0 0 1-.586-1.414c0-.512.195-1.024.586-1.415l9.611-9.611c.391-.391.903-.586 1.415-.586s1.023.195 1.414.586L32 19.559 49.705 1.855c.39-.391.902-.586 1.414-.586Z"
+                            stroke="#31C3BD" stroke-width="2" fill="none" />
+                    </svg>
+
+                    <!-- O outline icon -->
+                    <svg class="board__tile--O hidden" width="66" height="66" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M33 1c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C15.327 65 1 50.673 1 33 1 15.327 15.327 1 33 1Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z"
+                            stroke="#F2B137" stroke-width="2" fill="none" />
+                    </svg>
+                </div>
+
+                <!--5-->
+                <div class="board__tile">
+                    <!-- X outline icon -->
+                    <svg class="board__tile--X hidden" width="64" height="64" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M51.12 1.269c.511 0 1.023.195 1.414.586l9.611 9.611c.391.391.586.903.586 1.415s-.195 1.023-.586 1.414L44.441 32l17.704 17.705c.391.39.586.902.586 1.414 0 .512-.195 1.024-.586 1.415l-9.611 9.611c-.391.391-.903.586-1.415.586a1.994 1.994 0 0 1-1.414-.586L32 44.441 14.295 62.145c-.39.391-.902.586-1.414.586a1.994 1.994 0 0 1-1.415-.586l-9.611-9.611a1.994 1.994 0 0 1-.586-1.415c0-.512.195-1.023.586-1.414L19.559 32 1.855 14.295a1.994 1.994 0 0 1-.586-1.414c0-.512.195-1.024.586-1.415l9.611-9.611c.391-.391.903-.586 1.415-.586s1.023.195 1.414.586L32 19.559 49.705 1.855c.39-.391.902-.586 1.414-.586Z"
+                            stroke="#31C3BD" stroke-width="2" fill="none" />
+                    </svg>
+
+                    <!-- O outline icon -->
+                    <svg class="board__tile--O hidden" width="66" height="66" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M33 1c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C15.327 65 1 50.673 1 33 1 15.327 15.327 1 33 1Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z"
+                            stroke="#F2B137" stroke-width="2" fill="none" />
+                    </svg>
+                </div>
+
+                <!--6-->
+                <div class="board__tile">
+                    <!-- X outline icon -->
+                    <svg class="board__tile--X hidden" width="64" height="64" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M51.12 1.269c.511 0 1.023.195 1.414.586l9.611 9.611c.391.391.586.903.586 1.415s-.195 1.023-.586 1.414L44.441 32l17.704 17.705c.391.39.586.902.586 1.414 0 .512-.195 1.024-.586 1.415l-9.611 9.611c-.391.391-.903.586-1.415.586a1.994 1.994 0 0 1-1.414-.586L32 44.441 14.295 62.145c-.39.391-.902.586-1.414.586a1.994 1.994 0 0 1-1.415-.586l-9.611-9.611a1.994 1.994 0 0 1-.586-1.415c0-.512.195-1.023.586-1.414L19.559 32 1.855 14.295a1.994 1.994 0 0 1-.586-1.414c0-.512.195-1.024.586-1.415l9.611-9.611c.391-.391.903-.586 1.415-.586s1.023.195 1.414.586L32 19.559 49.705 1.855c.39-.391.902-.586 1.414-.586Z"
+                            stroke="#31C3BD" stroke-width="2" fill="none" />
+                    </svg>
+
+                    <!-- O outline icon -->
+                    <svg class="board__tile--O hidden" width="66" height="66" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M33 1c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C15.327 65 1 50.673 1 33 1 15.327 15.327 1 33 1Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z"
+                            stroke="#F2B137" stroke-width="2" fill="none" />
+                    </svg>
+                </div>
+
+                <!--7-->
+                <div class="board__tile">
+                    <!-- X outline icon -->
+                    <svg class="board__tile--X hidden" width="64" height="64" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M51.12 1.269c.511 0 1.023.195 1.414.586l9.611 9.611c.391.391.586.903.586 1.415s-.195 1.023-.586 1.414L44.441 32l17.704 17.705c.391.39.586.902.586 1.414 0 .512-.195 1.024-.586 1.415l-9.611 9.611c-.391.391-.903.586-1.415.586a1.994 1.994 0 0 1-1.414-.586L32 44.441 14.295 62.145c-.39.391-.902.586-1.414.586a1.994 1.994 0 0 1-1.415-.586l-9.611-9.611a1.994 1.994 0 0 1-.586-1.415c0-.512.195-1.023.586-1.414L19.559 32 1.855 14.295a1.994 1.994 0 0 1-.586-1.414c0-.512.195-1.024.586-1.415l9.611-9.611c.391-.391.903-.586 1.415-.586s1.023.195 1.414.586L32 19.559 49.705 1.855c.39-.391.902-.586 1.414-.586Z"
+                            stroke="#31C3BD" stroke-width="2" fill="none" />
+                    </svg>
+
+                    <!-- O outline icon -->
+                    <svg class="board__tile--O hidden" width="66" height="66" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M33 1c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C15.327 65 1 50.673 1 33 1 15.327 15.327 1 33 1Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z"
+                            stroke="#F2B137" stroke-width="2" fill="none" />
+                    </svg>
+                </div>
+
+                <!--8-->
+                <div class="board__tile">
+                    <!-- X outline icon -->
+                    <svg class="board__tile--X hidden" width="64" height="64" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M51.12 1.269c.511 0 1.023.195 1.414.586l9.611 9.611c.391.391.586.903.586 1.415s-.195 1.023-.586 1.414L44.441 32l17.704 17.705c.391.39.586.902.586 1.414 0 .512-.195 1.024-.586 1.415l-9.611 9.611c-.391.391-.903.586-1.415.586a1.994 1.994 0 0 1-1.414-.586L32 44.441 14.295 62.145c-.39.391-.902.586-1.414.586a1.994 1.994 0 0 1-1.415-.586l-9.611-9.611a1.994 1.994 0 0 1-.586-1.415c0-.512.195-1.023.586-1.414L19.559 32 1.855 14.295a1.994 1.994 0 0 1-.586-1.414c0-.512.195-1.024.586-1.415l9.611-9.611c.391-.391.903-.586 1.415-.586s1.023.195 1.414.586L32 19.559 49.705 1.855c.39-.391.902-.586 1.414-.586Z"
+                            stroke="#31C3BD" stroke-width="2" fill="none" />
+                    </svg>
+
+                    <!-- O outline icon -->
+                    <svg class="board__tile--O hidden" width="66" height="66" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M33 1c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C15.327 65 1 50.673 1 33 1 15.327 15.327 1 33 1Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z"
+                            stroke="#F2B137" stroke-width="2" fill="none" />
+                    </svg>
+                </div>
+
+                <!--9-->
+                <div class="board__tile">
+                    <!-- X outline icon -->
+                    <svg class="board__tile--X hidden" width="64" height="64" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M51.12 1.269c.511 0 1.023.195 1.414.586l9.611 9.611c.391.391.586.903.586 1.415s-.195 1.023-.586 1.414L44.441 32l17.704 17.705c.391.39.586.902.586 1.414 0 .512-.195 1.024-.586 1.415l-9.611 9.611c-.391.391-.903.586-1.415.586a1.994 1.994 0 0 1-1.414-.586L32 44.441 14.295 62.145c-.39.391-.902.586-1.414.586a1.994 1.994 0 0 1-1.415-.586l-9.611-9.611a1.994 1.994 0 0 1-.586-1.415c0-.512.195-1.023.586-1.414L19.559 32 1.855 14.295a1.994 1.994 0 0 1-.586-1.414c0-.512.195-1.024.586-1.415l9.611-9.611c.391-.391.903-.586 1.415-.586s1.023.195 1.414.586L32 19.559 49.705 1.855c.39-.391.902-.586 1.414-.586Z"
+                            stroke="#31C3BD" stroke-width="2" fill="none" />
+                    </svg>
+
+                    <!-- O outline icon -->
+                    <svg class="board__tile--O hidden" width="66" height="66" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M33 1c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C15.327 65 1 50.673 1 33 1 15.327 15.327 1 33 1Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z"
+                            stroke="#F2B137" stroke-width="2" fill="none" />
+                    </svg>
+                </div>
             </div>
 
             <div class="game-stats">
                 <div class="game-stat game-stats__player1">
                     <p>
-                        <span class="game-stats__player1-icon">X</span>
-                        (<span class="game-stats__player1-notation">You</span>)
+                        <span class="game-stats__player1-icon" id="player1-icon">
+                            X
+                        </span>
+                        (<span class="game-stats__player1-notation" id="player1-notation">
+                            You
+                        </span>)
                     </p>
-                    <p class="game-stats__value">14</p>
+                    <p class="game-stats__value" id="player1-score">14</p>
                 </div>
 
                 <div class="game-stat game-stats__ties">
                     <p>Ties</p>
-                    <p class="game-stats__value">32</p>
+                    <p class="game-stats__value" id="ties">32</p>
                 </div>
 
                 <div class="game-stat game-stats__player2">
                     <p>
-                        <span class="game-stats__player2-icon">O</span>
-                        (<span class="game-stats__player2-notation">CPU</span>)
+                        <span class="game-stats__player2-icon" id="player2-icon">
+                            O
+                        </span>
+                        (<span class="game-stats__player2-notation" id="player2-notation">
+                            CPU
+                        </span>)
                     </p>
-                    <p class="game-stats__value">11</p>
+                    <p class="game-stats__value" id="player2-score">11</p>
                 </div>
             </div>
         </template>
