style: polish styles with animation overlay and transtions

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     </main>
 
     <!-- winner overlay -->
-    <div class="overlay hidden" aria-hidden="true" id="overlay">
+    <div class="overlay" aria-hidden="true" id="overlay">
         <div class="overlay__win-container">
 
             <p class="overlay__win-message">
