--- a/index.html
+++ b/index.html
@@ -61,14 +61,39 @@
             <p>Turn</p>
         </div>
 
-        <!-- restart button -->
-        <button type="button" class="restart-btn hidden" id="restart-btn">
-            <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M19.524 0h-1.88a.476.476 0 0 0-.476.499l.159 3.284A9.81 9.81 0 0 0 9.835.317C4.415.317-.004 4.743 0 10.167.004 15.597 4.406 20 9.835 20a9.796 9.796 0 0 0 6.59-2.536.476.476 0 0 0 .019-.692l-1.348-1.349a.476.476 0 0 0-.65-.022 6.976 6.976 0 0 1-9.85-.63 6.987 6.987 0 0 1 .63-9.857 6.976 6.976 0 0 1 10.403 1.348l-4.027-.193a.476.476 0 0 0-.498.476v1.881c0 .263.213.476.476.476h7.944A.476.476 0 0 0 20 8.426V.476A.476.476 0 0 0 19.524 0Z"
-                    fill="#1F3641" />
-            </svg>
-        </button>
+        <div class="header__buttons">
+            <!-- restart button -->
+            <button type="button" class="restart-btn hidden" id="restart-btn" title="Restart Game">
+                <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M19.524 0h-1.88a.476.476 0 0 0-.476.499l.159 3.284A9.81 9.81 0 0 0 9.835.317C4.415.317-.004 4.743 0 10.167.004 15.597 4.406 20 9.835 20a9.796 9.796 0 0 0 6.59-2.536.476.476 0 0 0 .019-.692l-1.348-1.349a.476.476 0 0 0-.65-.022 6.976 6.976 0 0 1-9.85-.63 6.987 6.987 0 0 1 .63-9.857 6.976 6.976 0 0 1 10.403 1.348l-4.027-.193a.476.476 0 0 0-.498.476v1.881c0 .263.213.476.476.476h7.944A.476.476 0 0 0 20 8.426V.476A.476.476 0 0 0 19.524 0Z"
+                        fill="#1F3641" />
+                </svg>
+            </button>
+
+            <!-- quit button -->
+            <button type="button" class="quit-btn hidden" id="header-quit-btn" title="Quit Game">
+                <svg fill="currentColor" height="20px" width="20px" version="1.1" id="Capa_1"
+                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 55 55"
+                    xml:space="preserve">
+                    <g>
+                        <path fill="currentColor" d="M53.924,23.618c-0.051-0.123-0.125-0.234-0.217-0.327L41.708,11.293c-0.391-0.391-1.023-0.391-1.414,0
+		s-0.391,1.023,0,1.414L50.587,23H29.001c-0.553,0-1,0.447-1,1s0.447,1,1,1h21.586L40.294,35.293c-0.391,0.391-0.391,1.023,0,1.414
+		C40.489,36.902,40.745,37,41.001,37s0.512-0.098,0.707-0.293l11.999-11.999c0.093-0.092,0.166-0.203,0.217-0.326
+		C54.025,24.138,54.025,23.862,53.924,23.618z" />
+                        <path fill="currentColor" d="M36.001,29c-0.553,0-1,0.447-1,1v16h-10V8c0-0.436-0.282-0.821-0.697-0.953L8.442,2h26.559v16c0,0.553,0.447,1,1,1
+		s1-0.447,1-1V1c0-0.553-0.447-1-1-1h-34c-0.032,0-0.06,0.015-0.091,0.018C1.854,0.023,1.805,0.036,1.752,0.05
+		C1.658,0.075,1.574,0.109,1.493,0.158C1.467,0.174,1.436,0.174,1.411,0.192C1.38,0.215,1.356,0.244,1.328,0.269
+		c-0.017,0.016-0.035,0.03-0.051,0.047C1.201,0.398,1.139,0.489,1.093,0.589c-0.009,0.02-0.014,0.04-0.022,0.06
+		C1.029,0.761,1.001,0.878,1.001,1v46c0,0.125,0.029,0.243,0.072,0.355c0.014,0.037,0.035,0.068,0.053,0.103
+		c0.037,0.071,0.079,0.136,0.132,0.196c0.029,0.032,0.058,0.061,0.09,0.09c0.058,0.051,0.123,0.093,0.193,0.13
+		c0.037,0.02,0.071,0.041,0.111,0.056c0.017,0.006,0.03,0.018,0.047,0.024l22,7C23.797,54.984,23.899,55,24.001,55
+		c0.21,0,0.417-0.066,0.59-0.192c0.258-0.188,0.41-0.488,0.41-0.808v-6h11c0.553,0,1-0.447,1-1V30
+		C37.001,29.447,36.553,29,36.001,29z" />
+                    </g>
+                </svg>
+            </button>
+        </div>
     </header>
     <main class="main wrapper" id="main">
 
@@ -110,10 +135,31 @@
                 </div>
 
                 <div class="menu__choices">
-                    <button type="submit" class="menu__choice menu__choice--cpu" id="button-cpu" name="menu-choice"
-                        value="cpu">
-                        New Game (vs CPU)
-                    </button>
+                    <!-- CPU choice row -->
+                    <div class="menu__choice-row">
+                        <button type="submit" class="menu__choice menu__choice--cpu" id="button-cpu" name="menu-choice"
+                            value="cpu">
+                            New Game (vs CPU)
+                        </button>
+
+                        <div class="menu__choice-custom-select" id="cpu-difficulty-select">
+                            <div class="menu__choice-selected" tabindex="0">
+                                <span id="selected-text">Easy 🐣</span>
+                                <span class="arrow">&#9662;</span> <!-- ▼ icon -->
+                            </div>
+                            <div class="menu__choice-options hidden">
+                                <div class="menu__choice-option" data-value="easy">Easy 🐣</div>
+                                <div class="menu__choice-option" data-value="medium">Medium 🧠</div>
+                                <div class="menu__choice-option" data-value="hard">Hard 💀</div>
+                                <div class="menu__choice-option" data-value="minimax">Unbeatable 👽</div>
+                            </div>
+                            <!-- Hidden input to send selected value via form -->
+                            <input type="hidden" name="cpu-difficulty" value="easy" />
+                        </div>
+
+                    </div>
+
+                    <!-- Player choice -->
                     <button type="submit" class="menu__choice menu__choice--player" id="button-vs-player"
                         name="menu-choice" value="vs-player">
                         New Game (vs Player)
@@ -314,9 +360,10 @@
 
     </main>
 
-    <!-- winner overlay -->
+    <!-- overlay -->
     <div class="overlay" aria-hidden="true" id="overlay">
-        <div class="overlay__win-container">
+        <!-- winner overlay -->
+        <div class="overlay__win-container" id="win-container">
 
             <p class="overlay__win-message">
                 <span id="overlay-win-message">You</span> won!
@@ -329,12 +376,27 @@
             </h1>
 
             <div class="overlay__win-buttons">
-                <button type="button" class="overlay__win-btn overlay__win-btn--quit" id="quit-btn">
+                <button type="button" class="overlay__win-btn overlay__win-btn--quit" id="overlay-quit-btn">
                     Quit
                 </button>
 
                 <button type="button" class="overlay__win-btn overlay__win-btn--next-round" id="next-round-btn">
                     Next Round
+                </button>
+            </div>
+        </div>
+
+        <!-- quit overlay -->
+        <div class="overlay__quit-container hidden" id="quit-confirm-container">
+            <h1 class="overlay__quit-message">You really wanna quit?</h1>
+
+            <div class="overlay__quit-buttons">
+                <button type="button" class="overlay__quit-btn overlay__quit-btn--confirm" id="confirm-quit-yes">
+                    Yes
+                </button>
+
+                <button type="button" class="overlay__quit-btn overlay__quit-btn--cancel" id="confirm-quit-no">
+                    No
                 </button>
             </div>
         </div>
