feat: add keyboard navigation for menu

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
                             </div>
 
                             <div class="menu__choice-options hidden">
-                                <div class="menu__choice-option" data-value="easy">Easy 🐣</div>
-                                <div class="menu__choice-option" data-value="medium">Medium 🧠</div>
-                                <div class="menu__choice-option" data-value="hard">Hard 💀</div>
-                                <div class="menu__choice-option" data-value="minimax">Unbeatable 👽</div>
+                                <div tabindex="0" class="menu__choice-option" data-value="easy">Easy 🐣</div>
+                                <div tabindex="0" class="menu__choice-option" data-value="medium">Medium 🧠</div>
+                                <div tabindex="0" class="menu__choice-option" data-value="hard">Hard 💀</div>
+                                <div tabindex="0" class="menu__choice-option" data-value="minimax">Unbeatable 👽</div>
                             </div>
                             <!-- Hidden input to send selected value via form -->
                             <input type="hidden" name="cpu-difficulty" value="easy" />
@@ -170,23 +170,23 @@
             <!-- board -->
             <div class="board" id="board">
                 <!--1-->
-                <div class="board__tile"></div>
+                <div tabindex="0" class="board__tile"></div>
                 <!--2-->
-                <div class="board__tile"></div>
+                <div tabindex="0" class="board__tile"></div>
                 <!--3-->
-                <div class="board__tile"></div>
+                <div tabindex="0" class="board__tile"></div>
                 <!--4-->
-                <div class="board__tile"></div>
+                <div tabindex="0" class="board__tile"></div>
                 <!--5-->
-                <div class="board__tile"></div>
+                <div tabindex="0" class="board__tile"></div>
                 <!--6-->
-                <div class="board__tile"></div>
+                <div tabindex="0" class="board__tile"></div>
                 <!--7-->
-                <div class="board__tile"></div>
+                <div tabindex="0" class="board__tile"></div>
                 <!--8-->
-                <div class="board__tile"></div>
+                <div tabindex="0" class="board__tile"></div>
                 <!--9-->
-                <div class="board__tile"></div>
+                <div tabindex="0" class="board__tile"></div>
             </div>
 
             <!-- stats -->
